added most important points to paper critique template

--- a/courses/csci7000-005_Sp26/paperCritiques.html
+++ b/courses/csci7000-005_Sp26/paperCritiques.html
@@ -83,7 +83,13 @@ and open the template in the editor.
             </p>
         </div>
         
-        <h4>5. Summary</h4>
+        <h4>5. Most important for class discussion</h4>
+        <div>
+            <p>What are you looking forward to get out of a class discussion based on this paper? What are the most important points you would like to discuss with colleagues and the professor in class? 
+            </p>
+        </div>
+        
+        <h4>6. Summary</h4>
         <div>
             What is your take-away message from this paper? Sum up the main implication of the paper from your perspective.
             This is useful for very quick review and refreshing your memory. It also forces you to try to identify the essence
