--- a/courses/csci7000-005_Sp26/index.html
+++ b/courses/csci7000-005_Sp26/index.html
@@ -121,7 +121,7 @@ transform modern software systems.
             <td> Danny Dig </td>
             <td> 
                 <ul>
-                <li>Course Introduction and discussing your expectations. </li>
+                <li>Course Introduction and discussing your expectations. <a href="./pdfs/CSCI_7000_005_W1L1.pdf">Slides presented in class</a>. </li>
                 <li>Read this excellent resource on how to <a class='urllink' href='http://cseweb.ucsd.edu/~wgg/CSE210/howtoread.html' rel='nofollow'>Read an Engineering Research paper</a> (by William Griswold). </li>
                 <li>Sign up on <a class='urllink' href='https://piazza.com/colorado/spring2026/csci7000005' rel='nofollow'>Piazza</a>.</li> 
                 <li> <p style="color: red;"> Notice this class meets in person: ECES 114 </p></li>
