added Canvas page

--- a/courses/csci7000-005_Sp26/index.html
+++ b/courses/csci7000-005_Sp26/index.html
@@ -136,7 +136,7 @@ transform modern software systems.
                 <li> Read two papers: (1) <a href="https://link.springer.com/article/10.1007/s11704-024-40231-1?fromPaywallRec=true">A survey on large language model based autonomous agents</a> by Lei Wang et al., Springer:Frontiers of Computer Science 2024</li>
                 <li> Read: (2) <a href="https://arxiv.org/pdf/2409.02977">Large Language Model-Based Agents for
 Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
-                <li> Afterwards, write a <a href="./paperCritiques.html">paper critique</a> for each paper. After you write the paper critique, please submit it <a href="https://canvas.colorado.edu/courses/">here on Canvas</a> (due by Wed, Jan 14 at 12pm).</li>
+                <li> Afterwards, write a <a href="./paperCritiques.html">paper critique</a> for each paper. After you write the paper critique, please submit it <a href="https://canvas.colorado.edu/courses/129777/assignments/2650812">here on Canvas</a> (due by Wed, Jan 14 at 12pm).</li>
                 <li>Read course <a href="./syllabus.html">syllabus</a> (and other info on our class webpage). </li>
                 
                 </ul>
