--- a/courses/csci7000-005_Sp26/index.html
+++ b/courses/csci7000-005_Sp26/index.html
@@ -133,6 +133,7 @@ transform modern software systems.
             <td> Danny Dig </td>
             <td> 
                 <ul>
+                <li> <a href="./pdfs/W1_L2_SurveyOfAgents.pdf">Slides</a>
                 <li> Read two papers: (1) <a href="https://link.springer.com/article/10.1007/s11704-024-40231-1?fromPaywallRec=true">A survey on large language model based autonomous agents</a> by Lei Wang et al., Springer:Frontiers of Computer Science 2024</li>
                 <li> Read: (2) <a href="https://arxiv.org/pdf/2409.02977">Large Language Model-Based Agents for
 Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
