added paper for Jan 21

--- a/courses/csci7000-005_Sp26/index.html
+++ b/courses/csci7000-005_Sp26/index.html
@@ -159,7 +159,7 @@ Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
             <td> Danny Dig </td>
             <td> 
                 <ul> 
-                <li> papers TBA </li>               
+                <li> <a href="https://arxiv.org/pdf/2509.06216">Agentic Software Engineering: Foundational Pillars and a Research Roadmap</a> by Ahmed Hassan et al., ACM TOSEM</li>               
                 <li>Read about the <a href="./researchProject.html">research project</a> (and other info on our class webpage). </li>
                 
                 </ul>
