added slides for Week 3 and Week 2

--- a/courses/csci7000-005_Sp26/index.html
+++ b/courses/csci7000-005_Sp26/index.html
@@ -159,6 +159,7 @@ Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
             <td> Danny Dig </td>
             <td> 
                 <ul> 
+                 <li> <a href="./pdfs/W2_L2_Roadmap.pdf">Slides</a>
                 <li> <a href="https://arxiv.org/pdf/2509.06216">Agentic Software Engineering: Foundational Pillars and a Research Roadmap</a> by Ahmed Hassan et al., ACM TOSEM</li>               
                 <li>Read about the <a href="./researchProject.html">research project</a> (and other info on our class webpage). </li>
                 
@@ -182,6 +183,7 @@ Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
             <td> Danny Dig </td>
             <td> 
                 <ul> 
+                 <li> <a href="./pdfs/W3_L2_MM-Mantra.pdf">Slides</a>
                 <li> <a href="https://danny.cs.colorado.edu/papers/ICSME25_MM-Assist.pdf">Together We Are Better: LLM, IDE and Semantic Embedding to Assist Move Method Refactoring</a> by Bellur et al, ICSME'25.
                 <li> <a href="https://arxiv.org/abs/2503.14340">MANTRA: Enhancing Automated Method-Level Refactoring with Contextual RAG and Multi-Agent LLM Collaboration</a> by Xu et al., 2025 </li>               
                 </ul>
