--- a/courses/csci7000-005_Sp26/index.html
+++ b/courses/csci7000-005_Sp26/index.html
@@ -224,8 +224,8 @@ Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
             <td>Wed, 02/11</td>
             <td>Ishika, Manodnya</td>
             <td><ul>
-             <li> Paper 1</li>
-             <li> Paper 2 </li>
+             <li> <a href="https://arxiv.org/abs/2210.03629">ReAct: Synergizing Reasoning and Acting in Language Models</a> by Shunyu et al., ICLR'23. </li>
+             <li> <a href="https://arxiv.org/abs/2303.11366">Reflexion: Language Agents with Verbal Reinforcement Learning</a> by Shinn et al., NIPS'23</li>
             </ul>
             </td>
         </tr>
