changed class time for Project Bazaar

--- a/courses/csci7000-005_Sp26/index.html
+++ b/courses/csci7000-005_Sp26/index.html
@@ -204,7 +204,7 @@ Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
             <td><ul>
              <li> Project Bazaar</li>
              <li><a href="./projectTeams.html">Form project teams</a></li>
-             <li> <p style="color: red;"> Notice this class meets in person: ECES 114 </p></li>
+             <li> <p style="color: red;"> Notice this class meets in person: DLC 1B20 </p></li>
             </ul>
             </td>
         </tr>
@@ -215,7 +215,7 @@ Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
             <td><ul>
              <li> Project Bazaar</li>
              <li><a href="./projectTeams.html">Form project teams</a></li>
-            <li> <p style="color: red;"> Notice this class meets in person: ECES 114 </p></li>
+            <li> <p style="color: red;"> Notice this class meets in person: DLC 1B20 </p></li>
             </ul>
             </td>
         </tr>
