updated schedule for 02/23

--- a/courses/csci7000-005_Sp26/index.html
+++ b/courses/csci7000-005_Sp26/index.html
@@ -252,8 +252,8 @@ Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
             <td>Mon, 02/23</td>
             <td>Kevin, Rayaan</td>
             <td><ul>
-             <li> TBA</li> 
-             <li> TBA</li> 
+             <li> <a href="https://arxiv.org/pdf/2305.15334">Gorilla: Large Language Model Connected with Massive APIs</a> by Patil et al., NIPS'24</li> 
+             <li> <a href="https://arxiv.org/pdf/2211.10435">PAL: Program-aided Language Models</a> by Gao et al., ICML'23</li> 
             </ul>
             </td>
         </tr>
