added schedule for 02/25

--- a/courses/csci7000-005_Sp26/index.html
+++ b/courses/csci7000-005_Sp26/index.html
@@ -262,8 +262,8 @@ Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
             <td>Wed, 02/25</td>
             <td>Sudhanva, Ved</td>
             <td><ul>
-             <li> TBA</li> 
-             <li> TBA</li> 
+             <li> <a href="https://arxiv.org/pdf/2405.15793">SWE-agent: Agent-Computer Interfaces Enable Automated Software Engineering</a> by Yang et al., NeurIPS'24.</li> 
+             <li> <a href="https://arxiv.org/pdf/2404.05427">AutoCodeRover: Autonomous Program Improvement</a> by Zhang et al., ISSTA'24.</li> 
             </ul>
             </td>
         </tr>
