updated schedule for the 1st week of March

--- a/courses/csci7000-005_Sp26/index.html
+++ b/courses/csci7000-005_Sp26/index.html
@@ -272,8 +272,9 @@ Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
             <td>Mon, 03/02</td>
             <td>Rutuja, Richard</td>
             <td><ul>
-             <li> TBA</li> 
-             <li> TBA</li> 
+             <li> <a href="https://arxiv.org/pdf/2308.08155">AutoGen: Enabling Next-Gen LLM
+Applications via Multi-Agent Conversation</a> by Wu et al. </li> 
+             <li> <a href="https://arxiv.org/pdf/2308.00352">METAGPT: Meta Programming for a Multi-Agent Collaborative Framework</a> by Hong et al., ICLR'24 </li> 
             </ul>
             </td>
         </tr>
@@ -282,8 +283,9 @@ Software Engineering: A Survey</a> by Junwei Liu et al., ACM TOSEM 2025 </li>
             <td>Wed, 03/04</td>
             <td>Soham, Jayanth</td>
             <td><ul>
-             <li> TBA</li> 
-             <li> TBA</li> 
+             <li> <a href="https://openreview.net/pdf?id=zj7YuTE4t8">Improving Factuality and Reasoning in Language Models
+through Multiagent Debate</a> by Du et al., ICML'24. </li> 
+             <li> <a href="https://dl.acm.org/doi/epdf/10.1145/3715754">Demystifying LLM-Based Software Engineering Agents</a> by Xia et el., FSE'25</li> 
             </ul>
             </td>
         </tr>
